# c-net

./: .gitignore  .gitmodules  CMakeLists.txt  Kconfig  LICENSE.md  README.md
c-benchmark/: CMakeLists.txt
c-benchmark/include/: benchmark.h  benchmark_function.h
c-benchmark/src/: benchmark.c
c-benchmark/test/: bench_example.c  vector_dot_int8.c  vector_dot_int8.h  vector_dot_int8_benchmark.c  vector_dot_int8_benchmark.h
c-image/: CMakeLists.txt
c-image/include/: imgproc.h  tensor_pixel.h
c-image/src/: imgproc.c  stb_image.h  stb_image_resize.h  tensor_pixel.c
c-netend/: CMakeLists.txt
c-netend/examples/: CMakeLists.txt  convert_data.cpp  face-demo.c  face_retrainface.cpp  lpr-demo.c  network_verify.cpp  plate_recognize.c  plate_retainface.cpp  quantize-lpr.sh
c-netend/examples/models/face/: face-opt.c  face-opt.h  face-opt.param  face-opt.table  face.param  mobilefacenet-opt.h  mobilefacenet-opt.param  mobilefacenet-opt.table  mobilefacenet.param
c-netend/examples/models/plate/: lpc-opt.c  lpc-opt.h  lpc-opt.param  lpc-opt.table  lpc.param  lpr-opt.h  lpr-opt.param  lpr-opt.table  lpr.param  plate-opt.c  plate-opt.h  plate-opt.param  plate-opt.table
c-netend/examples/tools/: onnx2ncnn
c-netend/include/detection/: affine_matrix.h  mtcnn.h  object_box.h  retina_face.h  yolo.h
c-netend/include/face/: arc_face.h  face_info.h  mtcnn_face_detector.h
c-netend/include/lpr/: lpc_recognizer.h  lpr_recognizer.h  mtcnn_plate_detector.h  plate_info.h
c-netend/src/detection/: affine_matrix.c  mtcnn.c  object_box.c  retina_face.c  yolov2.c  yolov3.c
c-netend/src/face/: arc_face.c  face_info.c  mtcnn_face_detector.c
c-netend/src/lpr/: lpc_recoginizer.c  lpr_recognizer.c  mtcnn_plate_detector.c  plate_info.c
c-network/: CMakeLists.txt
c-network/benchmark/: CMakeLists.txt  inner_product.c  inner_product.h  inner_product_benchmark.c  inner_product_benchmark.h
c-network/include/: network.h  operation.h  operation_benchmark.h  operation_config.h  operation_define.h  quantize16.h  quantize_s8.h
c-network/src/: CMakeLists.txt  network.c  operation.c  operation_benchmark.c  operation_registry.c  operation_registry.c.in  quantize16.c  quantize_s8.c
c-network/src/operation/: activation.c  batch_norm.c  binary.c  concat.c  convolution.c  crop.c  inner_product.c  memory_data.c  padding.c  permute.c  pooling.c  prelu.c  reshape.c  shuffle_channel.c  sigmoid.c  slice.c  softmax.c  unary.c  upsample.c
c-network/tools/: CMakeLists.txt
c-network/tools/nn-case/: CMakeLists.txt  CNetCase.cpp  CNetCase.h  CNetLayerCase.cpp  CNetLayerCase.h  CNetQuantize.cpp  CNetQuantize.h  CNetQuantizer.cpp  CNetQuantizer.h  NetworkCase.cpp  QuantizeData.cpp  QuantizeData.h
c-network/tools/nn-case/layer/: ActivationCase.cpp  ActivationCase.h  BatchNormCase.cpp  BatchNormCase.h  BinaryOpCase.cpp  BinaryOpCase.h  ConcatCase.cpp  ConcatCase.h  ConvolutionCase.cpp  ConvolutionCase.h  CropCase.cpp  CropCase.h  EltwiseCase.cpp  EltwiseCase.h  FriendLayerCase.ini  IgnoreLayerCase.cpp  InnerProductCase.cpp  InnerProductCase.h  InterpCase.cpp  InterpCase.h  MemoryDataCase.cpp  MemoryDataCase.h  PReLUCase.cpp  PReLUCase.h  PaddingCase.cpp  PaddingCase.h  PermuteCase.cpp  PermuteCase.h  PoolingCase.cpp  PoolingCase.h  ReshapeCase.cpp  ReshapeCase.h  ShuffleChannelCase.cpp  ShuffleChannelCase.h  SigmoidCase.cpp  SigmoidCase.h  SliceCase.cpp  SliceCase.h  SoftmaxCase.cpp  SoftmaxCase.h  (+2 more)
c-network/tools/quantize/: CMakeLists.txt  calibration.cpp  quantize_data.cpp  quantize_data.h  utils.h
c-tensor/: CMakeLists.txt
c-tensor/include/: tensor.h  tensor_operation.h  tensor_tools.h
c-tensor/src/: tensor.c  tensor_cut_border.c  tensor_padding.c  tensor_resize_bicubic.c  tensor_resize_bilinear.c  tensor_softmax.c
c-tester/: CMakeLists.txt
c-tester/include/: function_tester.h  tester.h  tester_base.h
c-tester/src/: tester.c  unity.c
c-tester/test/: test_example.c
c-utils/: CMakeLists.txt
c-utils/include/: allocator.h  container_linked_list.h  container_vector.h  container_vector_define.h  fxdiv.h  option.h  pthreadpool.h  status.h  timer.h
c-utils/src/: allocator.c  container_linked_list.c  container_vector.c  memory_cached.c  memory_cached.h  option.c  threadpool-pthreads.c
c-utils/src/ncx-pool/: ncx_core.h  ncx_lock.h  ncx_log.h  ncx_slab.c  ncx_slab.h
